2014-02-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/ServerInfo.cpp: portNum initialized to
	DEFAULT_RSP_PORT.
	* src/ServerInfo.h: Define DEFAULT_RSP_PORT.
	* src/main.cpp (initPlatform): Do not delete xml at
	end of function, since it causes stack corruption. BUG TO BE FIXED.

2014-02-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/ServerInfo.cpp (ServerInfo::ServerInfo): Initialize
	halDebugLevel.
	(ServerInfo::halDebug): Created (two versions).
	* src/ServerInfo.h: Include epiphany-hal-data from e-hal. New
	accessor methods halDebug (set and get), and new private data
	halDebugLevel.
	* src/TargetControlHardware.cpp
	(TargetControlHardware::initHwPlatform): initialize platform using
	halDebug from ServerInfo. No need to call e_set_host_verbosity,
	since called from init.
	* src/main.cpp (usage): Document new flag --hal-debug
	(main): Capture --hal-debug value.

2014-01-28  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* Release/src/subdir.mk: Added reference to ServerInfo.c,
	ServerInfo.o and ServerInfo.d.
	* src/debugVerbose.h: Deleted.
	* src/GdbServer.cpp: Replace references to rspPort by si->port
	throughout, replace references to haltOnAttach by si->haltOnAttach
	throughout, replace references to ttyOut by si->ttyOut throughout,
	replace references to debug_level by calls to ServerInfo debug
	accessors throughout.
	(GdbServer): Initalize from ServerInfo, pass ServerInfo to
	RspConnection.
	* src/GdbServer.h: Constructor takes just ServerInfo as parameter,
	remove rspPort, haltOnAttach and ttyOut and replace by si, remove
	external ref to debug_level and include of debugVerbose.h.
	* src/RspConnection.cpp: Include ServerInfo.h
	(RspConnection): Take ServerInfo and sole parameter and extract
	portNum from this, remover overloaded version taking serviceName
	parameter, since nevery used.
	(rspInit): Remove serviceName parameter.
	(getPkt, putPkt): Replace debug_level by debugTrapAndRspConn.