@@ -1,14 +1,15 @@
 <?xml version="1.0"?>
 <platform version="1" name="zed_E64G4_512mb" lib="libe-hal.so" libinitargs="">
-	<chips>
-		<chip version="4" id="(32,8)" rows="8" cols="8" host_base="0x1e000000" core_memory_size="0x8000">
-			<ioregs col="2" row="2"/>
-		</chip>
-	</chips>
-	<external_memory>
-		<bank name="EXTERNAL_DRAM" start="0x8e000000" size="0x02000000" />
-		<bank name="EPIPHANY_DRAM" start="0x1e000000" size="0x02000000" />
-	</external_memory>
+  <chips>
+    <chip version="4" id="(32,8)" rows="8" cols="8" host_base="0x1e000000"
+	  core_memory_size="0x8000">
+      <ioregs col="2" row="2"/>
+    </chip>
+  </chips>
+  <external_memory>
+    <bank name="EXTERNAL_DRAM" start="0x8e000000" size="0x02000000" />
+    <bank name="EPIPHANY_DRAM" start="0x1e000000" size="0x02000000" />
+  </external_memory>
 </platform>
 
 
