@@ -1,0 +1,4 @@
+2014-02-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	* zed_E64G4_512mb/zed_E64G4_512mb.xml: Human readable format!
+
